--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   hexcolor: ^2.0.5
+  page_transition: ^2.0.4
 
 dev_dependencies:
   flutter_test:
