--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  email_auth: ^1.0.0
+  http: ^0.13.4
   flutter_svg: ^0.23.0+1
   intl: ^0.17.0
   google_fonts: ^2.1.0
